Changelog
---------

## NEXT_RELEASE (minor release)

- BatDynArray: almost feature parity between DynArray and Array
  Added new functions to BatDynArray so that it contains almost the same
  function set as BatArray
  #872
  (andrepd, review by Florent Monnier and Francois Berenger)

## v3.2.0 (minor release)

- BatArray.fold_while: ('acc -> 'a -> bool) -> ('acc -> 'a -> 'acc) ->
                       'acc -> 'a array -> 'acc * int
  #974
  (Francois Berenger, review by Cedric Cellier)

- Support for OCaml 4.12
  #980
  (kit-ty-kate)

- BatArray.fold is an alias for fold_left
  #976
  (Francois Berenger)

- BatList.fold is an alias for fold_left
  #975
  (Francois Berenger)

- BatArray.count_matching: ('a -> bool) -> 'a array -> int
  #972
  (Francois Berenger)

- BatList.count_matching: ('a -> bool) -> 'a list -> int
  #816
  (Francois Berenger)

- Provide an explicitly unthreaded package
  For Dune, provide an alternative batteries.unthreaded package
  #970
  (Jerome Vouillon)

- BatList.findi: correct documentation
  #967
  (Francois Berenger)

- BatOptParse.unprogify: bug fix (issue #965)
  '%prog' was replaced only once, now it is always replaced
  (in accordance with the documentation)
  #966
  (Francois Berenger, report by OnkV)

- Expose Map.remove_exn and Set.remove_exn: 'a -> 'a t -> 'a t
  #954
  (Cedric Cellier)

## v3.1.0 (minor release)

This minor release adds support for OCaml 4.11.

- Compatibility fixes for OCaml-4.11
  #962
  (Jerome Vouillon)

- BatEnum: added combination
  #518
  (Chimrod, review by hcarty)

- fix benchmarks
  #956
  (Cedric Cellier)

- BatFile: added count_lines
  #953
  (Francois Berenger, review by Cedric Cellier)

- BatArray: use unsafe_get and unsafe_set more often
  #947
  (Francois Berenger, review by Cedric Cellier)

- fix some tests for ocaml-4.10.0
  #944
  (kit-ty-kate)

- BatResult: BatPervasives.result is now equal to Stdlib.result
  instead of sharing constructors without being the same type
  #939, #957